[package]
authors = ["Sudharshan <solderneer@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "droid"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f4 = { version = "0.9.0", features = ["stm32f410", "rt"] }

[[bin]]
name = "droid"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
